Fix long section titles being misaligned
Fixes zotero/zotero#3356

--- a/src/common/stylesheets/components/_outline-view.scss
+++ b/src/common/stylesheets/components/_outline-view.scss
@@ -38,6 +38,7 @@
 				.toggle {
 					height: 1.25rem;
 					width: 9px;
+					flex-shrink: 0;
 					color: rgba(255,255,255,.5);
 					display: flex;
 					align-items: center;
